Tweak Enter Name dialog to have a max-width instead of fixed width, so it fits better on small screens.

--- a/public/css/dialog.css
+++ b/public/css/dialog.css
@@ -55,7 +55,7 @@ input[type="email"]:focus {
 }
 
 #assign-player {
-    width: 25em;
+    max-width: 25em;
 }
 
 .error-code {
